# quantconnect-mcp-server

./: CLAUDE.md  Dockerfile  HTTP_DEPLOYMENT_SUCCESS.md  README.md  create_tool_markdown.py  deploy-minimal-to-ec2.sh  deploy-to-ec2.sh  deploy.env.example  post_processing.py  pyproject.toml  test_http_client.py  test_mcp_http_client.py
.github/workflows/: push_to_docker_hub.yml  run_live_trading_tests.yml  run_tests.yml  update_models.yml
src/: __init__.py  api_connection.py  code_source_id.py  instructions.md  instructions_minimal.md  main.py  main_minimal.py  models.py  organization_workspace.py
src/tools/: account.py  ai.py  backtests.py  compile.py  files.py  lean_versions.py  live.py  live_commands.py  mcp_server_version.py  object_store.py  optimizations.py  project.py  project_collaboration.py  project_nodes.py
tests/: test_account.py  test_ai.py  test_backtest_charts.py  test_backtest_insights.py  test_backtest_orders.py  test_backtests.py  test_compile.py  test_files.py  test_initialization.py  test_lean_versions.py  test_live.py  test_live_charts.py  test_live_commands.py  test_live_insights.py  test_live_logs.py  test_live_orders.py  test_mcp_server_version.py  test_object_store.py  test_optimizations.py  test_organization_workspace.py  test_project.py  test_project_collaboration.py  test_project_nodes.py  utils.py
tests/algorithms/: Charts.cs  FilePatch.cs  InitializationErrors.cs  Insights.cs  LiveCharts.cs  LiveInsights.cs  LiveLiquidate.cs  LiveOrders.cs  OrderProperties.cs  ParameterOptimization.cs  RuntimeError.cs  charts.py  file_patch.py  (+13 more)
