[project]
name = "mcp-server"
version = "0.1.0"
description = "Python MCP server for local interactions with the QuantConnect API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=0.23.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.3",
    "email-validator",
    "pydantic[email]",
]

[tool.pytest.ini_options]
pythonpath = "src"
